--- a/src/static/index.html
+++ b/src/static/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="author" content="Devin Miller">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>WebsiteDevTips</title>
 	</head>
 	<body>
