Add meta tags, add favicon.

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="author" content="Devin Miller">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 		<title>WebsiteDevTips</title>
 	</head>
 	<body>
