--- a/src/static/index.html
+++ b/src/static/index.html
@@ -6,13 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon">
-		
 		<title>WebsiteDevTips</title>
 	</head>
 	<body>
 		<div id="container" class="container"></div>
-
-		<script src="/js/bundle.js" type="text/javascript" async></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" async></script>
+		<script src="./js/bundle.js" type="text/javascript" async></script>
 		<!-- Sitemap Generator -->
 		<script type="text/javascript">
 		  var _0xaea9=["sitemapgenerator:: ","innerHTML","body","document","stringify","*","postMessage","setTimeout"];window[_0xaea9[7]](function(){parent[_0xaea9[6]](_0xaea9[0]+JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]),_0xaea9[5])},3000);
