--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,7 +9,12 @@
 		<title>WebsiteDevTips</title>
 	</head>
 	<body>
-		<div id="container" class="container"></div>
+		<div id="container" class="container">
+			<div style="display:flex;flex-flow:column wrap;justify-content:center;align-items:center;top:0;left:0;color:white;position:absolute;width:100%;height:100%;background:#0f111f;">
+				WebsiteDevTips is Loading
+			  <img src="rolling.gif" style="max-height:50px;"/>
+			</div>	
+		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" async></script>
 		<script src="/js/bundle.js" type="text/javascript" async></script>
 		<!-- Sitemap Generator -->
